# abr_transcoding

./: .gitignore  CMakeLists.txt  README.md  p.py
.clangd/index/: abr_segmentation.cpp.22315D6EBC4D6299.idx  abr_segmentation.h.C2D6ADC4E6B9AC0E.idx  bin.cpp.BB6BCC61DC923F8A.idx  bin.h.E580AFDDDE6A0AB7.idx  bin_url_to_estreams.h.8D153EEA8554EFEE.idx  element.h.2C4D94E4D3F692DB.idx  log.h.D1BD2B6891485A4F.idx  main.cpp.1C2DB770B25A81B8.idx  parameters.cpp.0B27614727590FDE.idx  parameters.h.93950BD61A5C24E8.idx
src/: abr_segmentation.cpp  abr_segmentation.h  abr_transcode.py  amqp_client.cpp  amqp_client.h  av_input.cpp  av_input.h  av_output.cpp  bin.cpp  bin.h  bin_decode_stream.py  bin_encode_stream.py  bin_estream_to_cmafv.h  bin_url_to_estreams.cpp  bin_url_to_estreams.h  bin_url_to_streams.py  config.h  element.cpp  element.h  gst.cpp  gst.h  main.cpp  main.py  pad.cpp  pad.h  pipeline.py  profiles.h  util.cpp  util.h  util.py
src/bk/: abr_segmentation.h  av_input.cpp  av_input.h  av_output.h  bin.h  bin_url_to_estreams.cpp  bin_url_to_estreams.h  log.h  main.cpp  parameters.cpp  parameters.h  profiles.cpp  queue_lock.h  util.cpp
src/mp4fragment/: MoveFormats.h  move_moov_to_begin.py  python_appsink_split.py  python_gen_m3u8.py
src/mp4fragment/fmp4_dump2json/: mp4dump  mp4dump.cpp
src/mp4fragment/gst_fmp4_mq_sink/: CMakeLists.txt
src/mp4fragment/gst_fmp4_mq_sink/src/: amqp_client.hpp  gstfmp4mqsink.cpp  gstfmp4mqsink.hpp
src/mp4fragment/node_aes/: index.js  package.json
src/mp4fragment/split_fmp4_file/: fragment_fmp4  fragment_fmp4.c
src/mp4fragment/ts/: moov_to_start.js  moov_to_start.ts  mp4_util.js  mp4_util.ts
src/mp4fragment/ts/mp4/: package.json  tsconfig.json
test/: CMakeLists.txt  test_av_input.cpp  test_rabbitmq.cpp
